--- a/docs/examples/workflow/canary-rollout/rollout-v2.yaml
+++ b/docs/examples/workflow/canary-rollout/rollout-v2.yaml
@@ -1,17 +1,22 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: rollout-test
+  name: canary-test
   namespace: default
 spec:
   components:
-    - name: back-end
+    - name: canarydemo
       type: webservice
       properties:
-        # modify image tag to update component
-        image: nginx:1.21
-        port: 80
+        image: docker.io/barnett/canarydemo:v2
+        port: 8090
+
       traits:
+        - type: canary-traffic
+          properties:
+            port:
+              - 8090
+
         - type: rollout
           properties:
             targetSize: 2
@@ -20,16 +25,27 @@ spec:
               - replicas: 1
               - replicas: 1
 
+    - name: gateway
+      type: webservice
+      properties:
+        image: docker.io/barnett/canarydemo-gateway:v2
+        port: 8091
+
+      traits:
         - type: expose
           properties:
             port:
-            - 80
+              - 8091
 
-        - type: traffic-gateway
+        - type: istio-gateway
           properties:
             hosts:
-            - back-end.example.com
-            gateways: ingressgateway
+              - "*"
+            gateway: ingressgateway
+            match:
+              - exact: /server
+            port: 8091
+
 
 
   workflow:
@@ -41,11 +57,9 @@ spec:
           batchPartition: 0
           traffic:
             weightedTargets:
-              - revision: back-end-v1
-                port: 80
+              - revision: canarydemo-v1
                 weight: 90 # 90% shift to new version
-              - revision: back-end-v2
-                port: 80
+              - revision: canarydemo-v2
                 weight: 10 # 10% shift to new version
 
       # give user time to verify part of traffic shifting to newRevision
@@ -59,7 +73,5 @@ spec:
           batchPartition: 1
           traffic:
             weightedTargets:
-              - revision: back-end-v2
-                port: 80
+              - revision: canarydemo-v2
                 weight: 100 # 100% shift to new version
-
