Feat: runtime-cluster support rollout trait

--- a/charts/vela-core/templates/defwithtemplate/rollout.yaml
+++ b/charts/vela-core/templates/defwithtemplate/rollout.yaml
@@ -18,6 +18,7 @@ spec:
         	metadata: {
         		name:      context.name
         		namespace: context.namespace
+        		labels: "trait.oam.dev/rely-on-comp-rev": parameter.targetRevision
         	}
         	spec: {
         		targetRevisionName: parameter.targetRevision
