--- a/charts/vela-core/templates/addons/terraform-provider-alibaba.yaml
+++ b/charts/vela-core/templates/addons/terraform-provider-alibaba.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  initializer: |
+  application: |
     apiVersion: core.oam.dev/v1beta1
-    kind: Initializer
+    kind: Application
     metadata:
       annotations:
         addons.oam.dev/description: Kubernetes Terraform Controller for Alibaba Cloud
@@ -10,43 +10,39 @@ data:
       name: terraform-provider-alibaba
       namespace: default
     spec:
-      appTemplate:
-        spec:
-          components:
-          - name: alibaba-account-creds
-            properties:
-              apiVersion: v1
-              kind: Secret
-              metadata:
+      components:
+      - name: alibaba-account-creds
+        properties:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: alibaba-provider-secret
+            namespace: vela-system
+          stringData:
+            credentials: |
+              accessKeyID: [[ index .Args "ALICLOUD_ACCESS_KEY" ]]
+              accessKeySecret: [[ index .Args "ALICLOUD_SECRET_KEY" ]]
+              securityToken: [[ index .Args "ALICLOUD_SECURITY_TOKEN" ]]
+          type: Opaque
+        type: raw
+      - name: default
+        properties:
+          apiVersion: terraform.core.oam.dev/v1beta1
+          kind: Provider
+          metadata:
+            name: default
+            namespace: default
+          spec:
+            credentials:
+              secretRef:
+                key: credentials
                 name: alibaba-account-creds
                 namespace: vela-system
-              stringData:
-                credentials: |
-                  accessKeyID: [[ index .Args "ALICLOUD_ACCESS_KEY" ]]
-                  accessKeySecret: [[ index .Args "ALICLOUD_SECRET_KEY" ]]
-                  securityToken: [[ index .Args "ALICLOUD_SECURITY_TOKEN" ]]
-              type: Opaque
-            type: raw
-          - name: default
-            properties:
-              apiVersion: terraform.core.oam.dev/v1beta1
-              kind: Provider
-              metadata:
-                name: default
-                namespace: default
-              spec:
-                credentials:
-                  secretRef:
-                    key: credentials
-                    name: alibaba-account-creds
-                    namespace: vela-system
-                  source: Secret
-                provider: alibaba
-                region: '[[ index .Args "ALICLOUD_REGION" ]]'
-            type: raw
-        status: {}
-    status:
-      observedGeneration: 0
+              source: Secret
+            provider: alibaba
+            region: '[[ index .Args "ALICLOUD_REGION" ]]'
+        type: raw
+    status: {}
 kind: ConfigMap
 metadata:
   annotations:
