--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -1,26 +1,25 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
   name: keda
   namespace: vela-system
 spec:
-  appTemplate:
-    spec:
-      components:
-      - name: keda
-        properties:
-          chart: keda
-          repoType: helm
-          url: https://kedacore.github.io/charts
-        type: helm
-    status: {}
-  dependsOn:
-  - ref:
-      apiVersion: core.oam.dev/v1beta1
-      kind: Initializer
-      name: fluxcd
-      namespace: vela-system
-status:
-  observedGeneration: 0
+  components:
+  - name: keda
+    properties:
+      chart: keda
+      repoType: helm
+      url: https://kedacore.github.io/charts
+    type: helm
+  workflow:
+    steps:
+    - name: checking-depends-on
+      properties:
+        name: fluxcd
+        namespace: vela-system
+      type: depends-on-app
+    - name: apply-resources
+      type: apply-application
+status: {}
