--- a/vela-templates/addons/auto-gen/terraform-provider-azure.yaml
+++ b/vela-templates/addons/auto-gen/terraform-provider-azure.yaml
@@ -1,5 +1,5 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: Kubernetes Terraform Controller for Azure
@@ -7,40 +7,36 @@ metadata:
   name: terraform-provider-azure
   namespace: default
 spec:
-  appTemplate:
-    spec:
-      components:
-      - name: azure-account-creds
-        properties:
-          apiVersion: v1
-          kind: Secret
-          metadata:
+  components:
+  - name: azure-account-creds
+    properties:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: azure-account-creds
+        namespace: vela-system
+      stringData:
+        credentials: |
+          armClientID: [[ index .Args "ARM_CLIENT_ID" ]]
+          armClientSecret: [[ index .Args "ARM_CLIENT_SECRET" ]]
+          armSubscriptionID: [[ index .Args "ARM_SUBSCRIPTION_ID" ]]
+          armTenantID: [[ index .Args "ARM_TENANT_ID" ]]
+      type: Opaque
+    type: raw
+  - name: azure
+    properties:
+      apiVersion: terraform.core.oam.dev/v1beta1
+      kind: Provider
+      metadata:
+        name: azure
+        namespace: default
+      spec:
+        credentials:
+          secretRef:
+            key: credentials
             name: azure-account-creds
             namespace: vela-system
-          stringData:
-            credentials: |
-              armClientID: [[ index .Args "ARM_CLIENT_ID" ]]
-              armClientSecret: [[ index .Args "ARM_CLIENT_SECRET" ]]
-              armSubscriptionID: [[ index .Args "ARM_SUBSCRIPTION_ID" ]]
-              armTenantID: [[ index .Args "ARM_TENANT_ID" ]]
-          type: Opaque
-        type: raw
-      - name: azure
-        properties:
-          apiVersion: terraform.core.oam.dev/v1beta1
-          kind: Provider
-          metadata:
-            name: azure
-            namespace: default
-          spec:
-            credentials:
-              secretRef:
-                key: credentials
-                name: azure-account-creds
-                namespace: vela-system
-              source: Secret
-            provider: azure
-        type: raw
-    status: {}
-status:
-  observedGeneration: 0
+          source: Secret
+        provider: azure
+    type: raw
+status: {}
