--- a/vela-templates/addons/istio/template.yaml
+++ b/vela-templates/addons/istio/template.yaml
@@ -1,39 +1,46 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: "istio Controller is a Kubernetes Controller for manage traffic."
   name: istio
   namespace: istio-system
 spec:
-  dependsOn:
-    - ref:
-        apiVersion: core.oam.dev/v1beta1
-        kind: Initializer
-        name: fluxcd
-        namespace: vela-system
-    - ref:
-        apiVersion: core.oam.dev/v1beta1
-        kind: Initializer
-        name: ns-istio-system
-        namespace: vela-system
-  appTemplate:
-    spec:
-      components:
-        - name: istio
-          type: helm
-          properties:
-            repoType: helm
-            url:  https://charts.kubevela.net/addons
-            chart: istio
-            version: 1.11.1
+  workflow:
+    steps:
+      - name: checking-depends-on
+        type: depends-on-app
+        properties:
+          name: fluxcd
+          namespace: vela-system
+      - name: apply-ns
+        type: apply-component
+        properties:
+          component: ns-istio-system
+      - name: apply-resources
+        type: apply-remaining
+  components:
+    - name: ns-istio-system
+      type: raw
+      properties:
+        apiVersion: v1
+        kind: Namespace
+        metadata:
+          name: istio-system
+    - name: istio
+      type: helm
+      properties:
+        repoType: helm
+        url: https://charts.kubevela.net/addons
+        chart: istio
+        version: 1.11.1
 {{ range .ResourceFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
 {{ range .DefinitionFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
