--- a/vela-templates/addons/kruise/template.yaml
+++ b/vela-templates/addons/kruise/template.yaml
@@ -1,37 +1,38 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: "Kruise is a Kubernetes extended suite for application automations"
   name: kruise
   namespace: vela-system
 spec:
-  dependsOn:
-    - ref:
-        apiVersion: core.oam.dev/v1beta1
-        kind: Initializer
-        name: fluxcd
-        namespace: vela-system
-  appTemplate:
-    spec:
-      components:
-        - name: kruise
-          type: helm
-          properties:
-            repoType: git
-            url: https://github.com/openkruise/kruise
-            chart: ./charts/kruise/v0.9.0
-            git:
-              branch: master
-            values:
-              featureGates: PreDownloadImageForInPlaceUpdate=true
+  workflow:
+    steps:
+      - name: checking-depends-on
+        type: depends-on-app
+        properties:
+          name: fluxcd
+          namespace: vela-system
+      - name: apply-resources
+        type: apply-application
+  components:
+    - name: kruise
+      type: helm
+      properties:
+        repoType: git
+        url: https://github.com/openkruise/kruise
+        chart: ./charts/kruise/v0.9.0
+        git:
+          branch: master
+        values:
+          featureGates: PreDownloadImageForInPlaceUpdate=true
 {{ range .ResourceFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
 {{ range .DefinitionFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
