--- a/vela-templates/addons/ocm-cluster-manager/template.yaml
+++ b/vela-templates/addons/ocm-cluster-manager/template.yaml
@@ -1,21 +1,34 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: "ocm-cluster-manager can deploy an OCM hub cluster environment."
   name: ocm-cluster-manager
   namespace: vela-system
 spec:
-  appTemplate:
-    spec:
-      components:
+  workflow:
+    steps:
+      - name: apply-ns
+        type: apply-component
+        properties:
+          component: ns-open-cluster-management
+      - name: apply-resources
+        type: apply-remaining
+  components:
+    - name: ns-open-cluster-management
+      type: raw
+      properties:
+        apiVersion: v1
+        kind: Namespace
+        metadata:
+          name: open-cluster-management
 {{ range .ResourceFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
 {{ range .DefinitionFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
