--- a/vela-templates/addons/prometheus/template.yaml
+++ b/vela-templates/addons/prometheus/template.yaml
@@ -1,28 +1,29 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: "Prometheus is an open-source systems monitoring and alerting toolkit"
   name: prometheus
   namespace: vela-system
 spec:
-  dependsOn:
-    - ref:
-        apiVersion: core.oam.dev/v1beta1
-        kind: Initializer
-        name: fluxcd
-        namespace: vela-system
-  appTemplate:
-    spec:
-      components:
-        - name: prometheus
-          type: helm
-          properties:
-            repoType: helm
-            url: https://prometheus-community.github.io/helm-charts
-            chart: premetheus
+  workflow:
+    steps:
+      - name: checking-depends-on
+        type: depends-on-app
+        properties:
+          name: fluxcd
+          namespace: vela-system
+      - name: apply-resources
+        type: apply-application
+  components:
+    - name: prometheus
+      type: helm
+      properties:
+        repoType: helm
+        url: https://prometheus-community.github.io/helm-charts
+        chart: premetheus
 {{ range .DefinitionFiles }}
         - name: {{ .Name }}
           type: raw
           properties:
-{{ .Content | indent 12 }} {{ end }}
+{{ .Content | indent 4 }} {{ end }}
