--- a/vela-templates/addons/terraform-provider-azure/template.yaml
+++ b/vela-templates/addons/terraform-provider-azure/template.yaml
@@ -1,5 +1,5 @@
 apiVersion: core.oam.dev/v1beta1
-kind: Initializer
+kind: Application
 metadata:
   annotations:
     addons.oam.dev/description: Kubernetes Terraform Controller for Azure
@@ -7,47 +7,45 @@ metadata:
   name: terraform-provider-azure
   namespace: default
 spec:
-  appTemplate:
-    spec:
-      components:
-        - name: azure-account-creds
-          properties:
-            apiVersion: v1
-            kind: Secret
-            metadata:
-              name: azure-account-creds
+  components:
+    - name: azure-account-creds
+      properties:
+        apiVersion: v1
+        kind: Secret
+        metadata:
+          name: azure-account-creds
+          namespace: vela-system
+        type: Opaque
+        stringData:
+          credentials: |
+            armClientID: [[ index .Args "ARM_CLIENT_ID" ]]
+            armClientSecret: [[ index .Args "ARM_CLIENT_SECRET" ]]
+            armSubscriptionID: [[ index .Args "ARM_SUBSCRIPTION_ID" ]]
+            armTenantID: [[ index .Args "ARM_TENANT_ID" ]]
+      type: raw
+    - name: azure
+      type: raw
+      properties:
+        apiVersion: terraform.core.oam.dev/v1beta1
+        kind: Provider
+        metadata:
+          name: azure
+          namespace: default
+        spec:
+          provider: azure
+          credentials:
+            source: Secret
+            secretRef:
               namespace: vela-system
-            type: Opaque
-            stringData:
-              credentials: |
-                armClientID: [[ index .Args "ARM_CLIENT_ID" ]]
-                armClientSecret: [[ index .Args "ARM_CLIENT_SECRET" ]]
-                armSubscriptionID: [[ index .Args "ARM_SUBSCRIPTION_ID" ]]
-                armTenantID: [[ index .Args "ARM_TENANT_ID" ]]
-          type: raw
-        - name: azure
-          type: raw
-          properties:
-            apiVersion: terraform.core.oam.dev/v1beta1
-            kind: Provider
-            metadata:
-              name: azure
-              namespace: default
-            spec:
-              provider: azure
-              credentials:
-                source: Secret
-                secretRef:
-                  namespace: vela-system
-                  name: azure-account-creds
-                  key: credentials
+              name: azure-account-creds
+              key: credentials
 {{ range .ResourceFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
 {{ range .DefinitionFiles }}
-        - name: {{ .Name }}
-          type: raw
-          properties:
-{{ .Content | indent 12 }} {{ end }}
+    - name: {{ .Name }}
+      type: raw
+      properties:
+{{ .Content | indent 8 }} {{ end }}
