--- a/charts/vela-core/templates/addons/keda.yaml
+++ b/charts/vela-core/templates/addons/keda.yaml
@@ -1,39 +1,38 @@
 apiVersion: v1
 data:
-  initializer: |
+  application: |
     apiVersion: core.oam.dev/v1beta1
-    kind: Initializer
+    kind: Application
     metadata:
       annotations:
         addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
       name: keda
       namespace: vela-system
     spec:
-      appTemplate:
-        spec:
-          components:
-          - name: keda
-            properties:
-              chart: keda
-              repoType: helm
-              url: https://kedacore.github.io/charts
-            type: helm
-        status:
-          rollout:
-            batchRollingState: ""
-            currentBatch: 0
-            lastTargetAppRevision: ""
-            rollingState: ""
-            upgradedReadyReplicas: 0
-            upgradedReplicas: 0
-      dependsOn:
-      - ref:
-          apiVersion: core.oam.dev/v1beta1
-          kind: Initializer
-          name: fluxcd
-          namespace: vela-system
+      components:
+      - name: keda
+        properties:
+          chart: keda
+          repoType: helm
+          url: https://kedacore.github.io/charts
+        type: helm
+      workflow:
+        steps:
+        - name: checking-depends-on
+          properties:
+            name: fluxcd
+            namespace: vela-system
+          type: depends-on-app
+        - name: apply-resources
+          type: apply-application
     status:
-      observedGeneration: 0
+      rollout:
+        batchRollingState: ""
+        currentBatch: 0
+        lastTargetAppRevision: ""
+        rollingState: ""
+        upgradedReadyReplicas: 0
+        upgradedReplicas: 0
 kind: ConfigMap
 metadata:
   annotations:
