Fix: update action step name in .github/workflows/e2e-multicluster-test:yml
Co-authored-by: Jianbo Sun <wonderflow@icloud.com>

--- a/.github/workflows/e2e-multicluster-test.yml
+++ b/.github/workflows/e2e-multicluster-test.yml
@@ -33,7 +33,7 @@ jobs:
           do_not_skip: '["workflow_dispatch", "schedule", "push"]'
           concurrent_skipping: false
 
-  e2e-tests:
+  e2e-multi-cluster-tests:
     runs-on: aliyun
     needs: detect-noop
     if: needs.detect-noop.outputs.noop != 'true'
