Fix: fix built in workflow steps

--- a/docs/examples/workflow/apply-remaining/app.yaml
+++ b/docs/examples/workflow/apply-remaining/app.yaml
@@ -19,4 +19,4 @@ spec:
         type: apply-remaining
         properties:
           exceptions:
-            "server1": {}
+            - "server1"
