--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -760,6 +760,10 @@ spec:
                 items:
                   description: ApplicationComponent describe the component of application
                   properties:
+                    dependsOn:
+                      items:
+                        type: string
+                      type: array
                     externalRevision:
                       description: ExternalRevision specified the component revisionName
                       type: string
@@ -1074,6 +1078,10 @@ spec:
                     items:
                       description: WorkflowStep defines how to execute a workflow step.
                       properties:
+                        dependsOn:
+                          items:
+                            type: string
+                          type: array
                         inputs:
                           description: StepInputs defines variable input of WorkflowStep
                           items:
