--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -2053,6 +2053,10 @@ spec:
                           description: ApplicationComponent describe the component
                             of application
                           properties:
+                            dependsOn:
+                              items:
+                                type: string
+                              type: array
                             externalRevision:
                               description: ExternalRevision specified the component
                                 revisionName
@@ -2474,6 +2478,10 @@ spec:
                               description: WorkflowStep defines how to execute a workflow
                                 step.
                               properties:
+                                dependsOn:
+                                  items:
+                                    type: string
+                                  type: array
                                 inputs:
                                   description: StepInputs defines variable input of
                                     WorkflowStep
