--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflows.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflows.yaml
@@ -298,6 +298,10 @@ spec:
             items:
               description: WorkflowStep defines how to execute a workflow step.
               properties:
+                dependsOn:
+                  items:
+                    type: string
+                  type: array
                 inputs:
                   description: StepInputs defines variable input of WorkflowStep
                   items:
