Fix: use aliyun oss istio chart

--- a/vela-templates/addons/auto-gen/istio.yaml
+++ b/vela-templates/addons/auto-gen/istio.yaml
@@ -14,7 +14,7 @@ spec:
         properties:
           chart: istio
           repoType: helm
-          url: https://getindata.github.io/helm-charts/
+          url: https://charts.kubevela.net/addons
           version: 1.11.1
         type: helm
       - name: canary-rollout
