--- a/charts/vela-core/templates/addons/istio.yaml
+++ b/charts/vela-core/templates/addons/istio.yaml
@@ -17,7 +17,7 @@ data:
             properties:
               chart: istio
               repoType: helm
-              url: https://getindata.github.io/helm-charts/
+              url: https://charts.kubevela.net/addons
               version: 1.11.1
             type: helm
           - name: canary-rollout
