Fix: support terraform/provider-aws addon
Also added some componentdefinitions for AWS cloud resource

--- a/charts/vela-core/templates/addons/terraform-provider-alibaba.yaml
+++ b/charts/vela-core/templates/addons/terraform-provider-alibaba.yaml
@@ -16,7 +16,7 @@ data:
           apiVersion: v1
           kind: Secret
           metadata:
-            name: alibaba-provider-secret
+            name: alibaba-account-creds
             namespace: vela-system
           stringData:
             credentials: |
