--- a/vela-templates/addons/auto-gen/terraform-provider-alibaba.yaml
+++ b/vela-templates/addons/auto-gen/terraform-provider-alibaba.yaml
@@ -13,7 +13,7 @@ spec:
       apiVersion: v1
       kind: Secret
       metadata:
-        name: alibaba-provider-secret
+        name: alibaba-account-creds
         namespace: vela-system
       stringData:
         credentials: |
