Fix: fix multicluster coverage bug

--- a/.github/workflows/e2e-multicluster-test.yml
+++ b/.github/workflows/e2e-multicluster-test.yml
@@ -91,7 +91,7 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: /tmp/e2e-profile.out,/tmp/e2e_multicluster_test.out
+          files: /tmp/e2e-profile.out
           flags: e2e-multicluster-test
           name: codecov-umbrella
 
