--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -351,14 +351,7 @@ spec:
                 apiVersion: terraform.core.oam.dev/v1beta1
                 kind: Configuration
         type: raw
-    status:
-      rollout:
-        batchRollingState: ""
-        currentBatch: 0
-        lastTargetAppRevision: ""
-        rollingState: ""
-        upgradedReadyReplicas: 0
-        upgradedReplicas: 0
+    status: {}
   dependsOn:
   - ref:
       apiVersion: core.oam.dev/v1beta1
