Fix: fix apiserver 1.1.3 not available bug

--- a/charts/vela-core/templates/kubevela-apiserver.yaml
+++ b/charts/vela-core/templates/kubevela-apiserver.yaml
@@ -30,7 +30,7 @@ spec:
           args:
             - "apiserver"
             - "--bind-addr=0.0.0.0:{{ .Values.apiServer.port }}"
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+          image: {{ .Values.image.repository }}:{{ .Values.image.apiserverTag }}
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
           resources:
           {{- toYaml .Values.resources | nindent 12 }}
