--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -10,6 +10,7 @@ disableCaps: ""
 image:
   repository: oamdev/vela-core
   tag: latest
+  apiserverTag: v1.1.2
   pullPolicy: Always
 
 imagePullSecrets: []
