Fix: fix apiserver 1.1.3 not available bug (#2425)
* Fix: fix apiserver 1.1.3 not available bug

* Feat: change apiserver image repository

* Fix(helm chart): fix startup args for apiserver

Co-authored-by: barnettZQG <yiyun.pro>

--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -11,6 +11,10 @@ image:
   repository: oamdev/vela-core
   tag: latest
   pullPolicy: Always
+apiserverImage:
+  repository: oamdev/vela-apiserver
+  tag: v1.1.2
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
