Fix: allow pvc trait to attach more than once

--- a/charts/vela-core/templates/defwithtemplate/pvc.yaml
+++ b/charts/vela-core/templates/defwithtemplate/pvc.yaml
@@ -50,7 +50,7 @@ spec:
         		},
         	]
         }
-        outputs: pvc: {
+        outputs: "\(parameter.claimName)": {
         	apiVersion: "v1"
         	kind:       "PersistentVolumeClaim"
         	metadata: name: parameter.claimName
