--- a/charts/vela-minimal/templates/defwithtemplate/env.yaml
+++ b/charts/vela-minimal/templates/defwithtemplate/env.yaml
@@ -17,7 +17,7 @@ spec:
         	// +patchKey=name
         	containers: [{
         		name: context.name
-        		// +patchKey=name
+        		// +patchStrategy=retainKeys
         		env: [
         			for k, v in parameter.env {
         				name:  k
